Добавляет разметку шапки главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header>
-      <nav></nav>
+    <header class="page-header">
+      <img class="logo-sedona" src="#" alt="Логотип проекта Седона">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item"><a class="navigation-link" href="index.html">Главная</a></li>
+          <li class="navigation-item"><a class="navigation-link" href="about.html">О Седоне</a></li>
+          <li class="navigation-item"><a class="navigation-link" href="catalog.html">Гостиницы</a></li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><span class="visually-hidden">Поиск</span></a></li>
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><span class="visually-hidden">Избранное</span></a></li>
+        </ul>
+        <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header"></a>
+      </nav>
     </header>
     <main>
       <section></section>
