--- a/index.html
+++ b/index.html
@@ -17,23 +17,65 @@
           <li class="navigation-item"><a class="navigation-link" href="index.html"><span class="visually-hidden">Поиск</span></a></li>
           <li class="navigation-item"><a class="navigation-link" href="index.html"><span class="visually-hidden">Избранное</span></a></li>
         </ul>
-        <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header"></a>
+        <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header" value="ХОЧУ СЮДА!"></a>
       </nav>
     </header>
-    <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+    <main class="main-index">
+      <h1 class="visually-hidden">Учебный проект Седона</h1>
+      <section class="hero">
+        <img src="#" alt="Добро пожаловать в великолепную Седону. Мы круче Гранд-Каньона!">
+      </section>
+      <section class="description">
+        <h2>Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне,<br>заслуживающий большего!</h2>
+        <p>Рассмотрим причины, по&nbsp;которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+      <section class="advantage high-accent">
+        <h3>Настоящий<br>городок</h3>
+        <img class="advantage-devider" src="#" alt="">
+        <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+      </section>
+      <section class="advantage img-accent"></section>
+      <section class="advantage low-accent">
+        <h3>Небольшая<br>площадь</h3>
+        <img class="advantage-devider" src="#" alt="">
+        <p>Все достопримечательности находятся очень близко</p>
+      </section>
+      <section class="advantage mid-accent">
+        <h3>Красивая<br>дорога</h3>
+        <img class="advantage-devider" src="#" alt="">
+        <p>Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
+      </section>
+      <section class="advantage low-accent">
+        <h3>Мало<br>туристов</h3>
+        <img src="" alt="">
+        <p>Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
+      </section>
+      <section class="advantage img-accent"></section>
+      <section class="advantage high-accent">
+        <h3>Там есть<br>мост дьявола</h3>
+        <img class="advantage-devider" src="#" alt="">
+        <p>Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
+      </section>
+      <section class="advantage mid-accent">
+        <img src="#" alt="">
+        <h3>Жильё</h3>
+        <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
+      </section>
+      <section class="advantage no-accent">
+        <img src="#" alt="">
+        <h3>Еда</h3>
+        <p>Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+      </section>
+      <section class="advantage mid-accent">
+        <img src="#" alt="">
+        <h3>Сувениры</h3>
+        <p>Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
+      </section>
+      <section class="cta-main">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+        <a href="#"><input class="button-primary" type="button" name="button-cta-main" id="button-cta-main" value="ПОИСК ГОСТИНИЦЫ В СЕДОНЕ"></a>
+      </section>
     </main>
     <footer>
       <section></section>
