Добавляет разметку футера главной страницы

--- a/index.html
+++ b/index.html
@@ -77,9 +77,24 @@
         <a href="#"><input class="button-primary" type="button" name="button-cta-main" id="button-cta-main" value="ПОИСК ГОСТИНИЦЫ В СЕДОНЕ"></a>
       </section>
     </main>
-    <footer>
-      <section></section>
-      <section></section>
+    <footer class="page-footer">
+      <section class="subscribe">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и&nbsp;никакого спама,<br>честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
+          <input class="subscribe-input" type="text" name="subscribe-email" placeholder="Ваш e-mail">
+          <input class="subscribe-button" type="submit" name="subscribe-submit" value="Подписаться">
+        </form>
+      </section>
+      <section class="contacts">
+        <ul class="socials">
+          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Телеграм</span></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Ютьюб</span></a></li>
+        </ul>
+        <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <img class="logo-htmlacademy" src="#" alt="Логотип HTML Академии">
+      </section>
     </footer>
   </body>
 </html>
