Добавляет разметку шапки и футера страницы каталога гостиниц

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,40 @@
     <title>Каталог гостиниц</title>
   </head>
   <body>
+    <header class="page-header">
+      <img class="logo-sedona" src="#" alt="Логотип проекта Седона">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item"><a class="navigation-link" href="index.html">Главная</a></li>
+          <li class="navigation-item"><a class="navigation-link" href="about.html">О Седоне</a></li>
+          <li class="navigation-item"><a class="navigation-link" href="catalog.html">Гостиницы</a></li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><span class="visually-hidden">Поиск</span></a></li>
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><span class="visually-hidden">Избранное</span></a></li>
+        </ul>
+        <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header" value="ХОЧУ СЮДА!"></a>
+      </nav>
+    </header>
 
+    <footer class="page-footer">
+      <section class="subscribe">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и&nbsp;никакого спама,<br>честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
+          <input class="subscribe-input" type="text" name="subscribe-email" placeholder="Ваш e-mail">
+          <input class="subscribe-button" type="submit" name="subscribe-submit" value="Подписаться">
+        </form>
+      </section>
+      <section class="contacts">
+        <ul class="socials">
+          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Телеграм</span></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Ютьюб</span></a></li>
+        </ul>
+        <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <img class="logo-htmlacademy" src="#" alt="Логотип HTML Академии">
+      </section>
+    </footer>
   </body>
 </html>
