Добавляет неразрывные пробелы в карточки отелей

--- a/catalog.html
+++ b/catalog.html
@@ -112,10 +112,10 @@
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="#" alt="">
-                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+                <h3 class="hotel-card-title">Amara Resort &amp;&nbsp;Spa</h3>
                 <dl>
                   <dt>Гостиница</dt>
-                  <dd>От 4000 ₽</dd>
+                  <dd>От&nbsp;4000&nbsp;₽</dd>
                 </dl>
               </a>
               <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
@@ -139,10 +139,10 @@
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="#" alt="">
-                <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+                <h3 class="hotel-card-title">Villas at&nbsp;Poco Diablo</h3>
                 <dl>
                   <dt>Гостиница</dt>
-                  <dd>От 5000 ₽</dd>
+                  <dd>От&nbsp;5000&nbsp;₽</dd>
                 </dl>
               </a>
               <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
@@ -169,7 +169,7 @@
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
                 <dl>
                   <dt>Гостиница</dt>
-                  <dd>От 2500 ₽</dd>
+                  <dd>От&nbsp;2500&nbsp;₽</dd>
                 </dl>
               </a>
               <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
@@ -193,7 +193,7 @@
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
                 <dl>
                   <dt>Гостиница</dt>
-                  <dd>От 1500 ₽</dd>
+                  <dd>От&nbsp;1500&nbsp;₽</dd>
                 </dl>
               </a>
               <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
