Добавляет alt к изображениям на странице каталога гостиниц

--- a/catalog.html
+++ b/catalog.html
@@ -111,7 +111,7 @@
           <ul class="hotel-list">
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="#" alt="">
+                <img class="hotel-card-image" src="#" alt="Фасад гостиницы">
                 <h3 class="hotel-card-title">Amara Resort &amp;&nbsp;Spa</h3>
                 <dl>
                   <dt>Гостиница</dt>
@@ -122,23 +122,23 @@
               <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
               <ul class="rating-visual">
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Одна звезда рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Две звезды рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Три звезды рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Четыре звезды рейтинга">
                 </li>
               </ul>
               <span class="rating-value">Рейтинг: 8,5</span>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="#" alt="">
+                <img class="hotel-card-image" src="#" alt="Главное здание гостиницы">
                 <h3 class="hotel-card-title">Villas at&nbsp;Poco Diablo</h3>
                 <dl>
                   <dt>Гостиница</dt>
@@ -149,23 +149,23 @@
               <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
               <ul class="rating-visual">
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Одна звезда рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Две звезды рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Три звезды рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Четыре звезды рейтинга">
                 </li>
               </ul>
               <span class="rating-value">Рейтинг: 9,2</span>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="#" alt="">
+                <img class="hotel-card-image" src="#" alt="Гостиничный комплекс">
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
                 <dl>
                   <dt>Гостиница</dt>
@@ -176,20 +176,20 @@
               <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
               <ul class="rating-visual">
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Одна звезда рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Две звезды рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Три звезды рейтинга">
                 </li>
               </ul>
               <span class="rating-value">Рейтинг: 6,9</span>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="#" alt="">
+                <img class="hotel-card-image" src="#" alt="Один из гостиничных корпусов">
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
                 <dl>
                   <dt>Гостиница</dt>
@@ -200,10 +200,10 @@
               <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
               <ul class="rating-visual">
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Одна звезда рейтинга">
                 </li>
                 <li class="rating-item">
-                  <img src="#" alt="">
+                  <img src="#" alt="Две звезды рейтинга">
                 </li>
               </ul>
               <span class="rating-value">Рейтинг: 5,0</span>
