--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <li class="navigation-item"><a class="navigation-link" href="catalog.html">Гостиницы</a></li>
         </ul>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item"><a class="navigation-link" href="index.html"><span class="visually-hidden">Поиск</span></a></li>
-          <li class="navigation-item"><a class="navigation-link" href="index.html"><span class="visually-hidden">Избранное</span></a></li>
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="" alt="Поиск"></a></li>
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="" alt="Избранное"></a></li>
         </ul>
         <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header" value="ХОЧУ СЮДА!"></a>
       </nav>
@@ -76,8 +76,6 @@
         <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
         <a href="#"><input class="button-primary" type="button" name="button-cta-main" id="button-cta-main" value="ПОИСК ГОСТИНИЦЫ В СЕДОНЕ"></a>
       </section>
-    </main>
-    <footer class="page-footer">
       <section class="subscribe">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и&nbsp;никакого спама,<br>честное бойскаутское!</p>
@@ -86,11 +84,13 @@
           <input class="subscribe-button" type="submit" name="subscribe-submit" value="Подписаться">
         </form>
       </section>
+    </main>
+    <footer class="page-footer">
       <section class="contacts">
         <ul class="socials">
-          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Телеграм</span></a></li>
-          <li class="socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Ютьюб</span></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="" alt="ВКонтакте"></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="" alt="Telegram"></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="" alt="YouTube"></a></li>
         </ul>
         <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <img class="logo-htmlacademy" src="#" alt="Логотип HTML Академии">
