Исправляет замечания на странице каталога отелей
Убирает хедер внутри основного содержимого main.
Изменяет разметку переключения между отображениями результатов: реализация кнопками вместо ссылок.

--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <main class="main-catalog">
-      <header class="inner-header">
+      <section class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
@@ -31,7 +31,7 @@
             <a class="breadcrumbs-link">Гостиницы</a>
           </li>
         </ul>
-      </header>
+      </section>
       <section class="filters">
         <h2 class="visually-hidden">Фильтры</h2>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
@@ -105,9 +105,9 @@
             <option value="expensive">Сначала дорогие</option>
             <option value="popular">Сначала популярные</option>
           </select>
-          <a class="sorting-grid" href="#"><span class="visually-hidden">Показать плиткой</span></a>
-          <a class="sorting-cars" href="#"><span class="visually-hidden">Показать карточками</span></a>
-          <a class="sorting-list" href="#"><span class="visually-hidden">Показать списком</span></a>
+          <button type="button" class="sorting-grid"><img src="" alt="Показать плиткой"></button>
+          <button type="button" class="sorting-cars"><img src="" alt="Показать карточками"></button>
+          <button type="button" class="sorting-list"><img src="" alt="Показать списком"></button>
           <ul class="hotel-list">
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
