Исправляет замечания на главной странице
Добавляет alt-текст для декоративных изображений.

--- a/index.html
+++ b/index.html
@@ -31,43 +31,43 @@
       </section>
       <section class="advantage high-accent">
         <h3>Настоящий<br>городок</h3>
-        <img class="advantage-devider" src="#" alt="">
+        <img class="advantage-devider" src="#" alt="Разделитель перед объяснением">
         <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
       </section>
       <section class="advantage img-accent"></section>
       <section class="advantage low-accent">
         <h3>Небольшая<br>площадь</h3>
-        <img class="advantage-devider" src="#" alt="">
+        <img class="advantage-devider" src="#" alt="Разделитель перед объяснением">
         <p>Все достопримечательности находятся очень близко</p>
       </section>
       <section class="advantage mid-accent">
         <h3>Красивая<br>дорога</h3>
-        <img class="advantage-devider" src="#" alt="">
+        <img class="advantage-devider" src="#" alt="Разделитель перед объяснением">
         <p>Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
       </section>
       <section class="advantage low-accent">
         <h3>Мало<br>туристов</h3>
-        <img src="" alt="">
+        <img class="advantage-devider" src="" alt="Разделитель перед объяснением">
         <p>Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
       </section>
       <section class="advantage img-accent"></section>
       <section class="advantage high-accent">
         <h3>Там есть<br>мост дьявола</h3>
-        <img class="advantage-devider" src="#" alt="">
+        <img class="advantage-devider" src="#" alt="Разделитель перед объяснением">
         <p>Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
       </section>
       <section class="advantage mid-accent">
-        <img src="#" alt="">
+        <img src="#" alt="Собирательный образ жилья">
         <h3>Жильё</h3>
         <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
       </section>
       <section class="advantage no-accent">
-        <img src="#" alt="">
+        <img src="#" alt="Собирательный образ еды">
         <h3>Еда</h3>
         <p>Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
       </section>
       <section class="advantage mid-accent">
-        <img src="#" alt="">
+        <img src="#" alt="Собитрательный образ сувениров">
         <h3>Сувениры</h3>
         <p>Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
       </section>
