--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
       <section class="advantage high-accent">
         <h3>Настоящий<br>городок</h3>
-        <img class="advantage-devider" src="#" alt="Разделитель перед объяснением">
+        <hr class="devider-invert" width="60" size="2" noshade>
         <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
       </section>
       <section class="advantage img-accent">
@@ -39,17 +39,17 @@
       </section>
       <section class="advantage low-accent">
         <h3>Небольшая<br>площадь</h3>
-        <img class="advantage-devider" src="#" alt="Разделитель перед объяснением">
+        <hr width="60" size="2" noshade>
         <p>Все достопримечательности находятся очень близко</p>
       </section>
       <section class="advantage mid-accent">
         <h3>Красивая<br>дорога</h3>
-        <img class="advantage-devider" src="#" alt="Разделитель перед объяснением">
+        <hr width="60" size="2" noshade>
         <p>Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
       </section>
       <section class="advantage low-accent">
         <h3>Мало<br>туристов</h3>
-        <img class="advantage-devider" src="" alt="Разделитель перед объяснением">
+        <hr width="60" size="2" noshade>
         <p>Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
       </section>
       <section class="advantage img-accent">
@@ -57,7 +57,7 @@
       </section>
       <section class="advantage high-accent">
         <h3>Там есть<br>мост дьявола</h3>
-        <img class="advantage-devider" src="#" alt="Разделитель перед объяснением">
+        <hr class="devider-invert" width="60" size="2" noshade>
         <p>Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
       </section>
       <section class="advantage mid-accent">
