Внедряет графику в разметку страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <img class="logo-sedona" src="#" alt="Логотип проекта Седона">
+      <img class="logo-sedona" src="images/logo-header-sedona.svg" width="140" height="70" alt="Логотип проекта Седона">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item"><a class="navigation-link" href="index.html">Главная</a></li>
@@ -14,8 +14,8 @@
           <li class="navigation-item"><a class="navigation-link" href="catalog.html">Гостиницы</a></li>
         </ul>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="" alt="Поиск"></a></li>
-          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="" alt="Избранное"></a></li>
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="images/icon-usermenu-search.svg" width="20" height="20" alt="Поиск"></a></li>
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="images/icon-usermenu-bookmark.svg" width="20" height="20" alt="Избранное"></a></li>
         </ul>
         <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header" value="ХОЧУ СЮДА!"></a>
       </nav>
@@ -25,7 +25,7 @@
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span></a>
+            <a class="breadcrumbs-link" href="index.html"><img src="images/catalog/icon-breadcrumbs-home.svg" width="13" height="15" alt="Вернуться на главную страницу"></a>
           </li>
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link">Гостиницы</a>
@@ -105,13 +105,13 @@
             <option value="expensive">Сначала дорогие</option>
             <option value="popular">Сначала популярные</option>
           </select>
-          <button type="button" class="sorting-grid"><img src="" alt="Показать плиткой"></button>
-          <button type="button" class="sorting-cars"><img src="" alt="Показать карточками"></button>
-          <button type="button" class="sorting-list"><img src="" alt="Показать списком"></button>
+          <button type="button" class="sorting-grid"><img src="images/catalog/icon-resultsview-grid.svg" width="16" height="14" alt="Показать плиткой"></button>
+          <button type="button" class="sorting-cars"><img src="images/catalog/icon-resultsview-cards.svg" width="16" height="14" alt="Показать карточками"></button>
+          <button type="button" class="sorting-list"><img src="images/catalog/icon-resultsview-list.svg" width="16" height="14" alt="Показать списком"></button>
           <ul class="hotel-list">
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="#" alt="Фасад гостиницы">
+                <img class="hotel-card-image" src="images/catalog/hotelcovers-amara.jpg" width="300" height="212" alt="Фасад гостиницы">
                 <h3 class="hotel-card-title">Amara Resort &amp;&nbsp;Spa</h3>
                 <dl>
                   <dt>Гостиница</dt>
@@ -138,7 +138,7 @@
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="#" alt="Главное здание гостиницы">
+                <img class="hotel-card-image" src="images/catalog/hotelcovers-villas.jpg" width="300" height="212" alt="Главное здание гостиницы">
                 <h3 class="hotel-card-title">Villas at&nbsp;Poco Diablo</h3>
                 <dl>
                   <dt>Гостиница</dt>
@@ -165,7 +165,7 @@
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="#" alt="Гостиничный комплекс">
+                <img class="hotel-card-image" src="images/catalog/hotelcovers-desert.jpg" width="300" height="212" alt="Гостиничный комплекс">
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
                 <dl>
                   <dt>Гостиница</dt>
@@ -189,7 +189,7 @@
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="#" alt="Один из гостиничных корпусов">
+                <img class="hotel-card-image" src="images/catalog/hotelcovers-greentree.jpg" width="300" height="212" alt="Один из гостиничных корпусов">
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
                 <dl>
                   <dt>Гостиница</dt>
@@ -243,12 +243,12 @@
     <footer class="page-footer">
       <section class="contacts">
         <ul class="socials">
-          <li class="socials-item"><a class="socials-link" href="#"><img src="" alt="ВКонтакте"></a></li>
-          <li class="socials-item"><a class="socials-link" href="#"><img src="" alt="Telegram"></a></li>
-          <li class="socials-item"><a class="socials-link" href="#"><img src="" alt="YouTube"></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="images/icon-social-vk.svg" width="48" height="41" alt="ВКонтакте"></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="images/icon-social-telegram.svg" width="48" height="41" alt="Telegram"></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="images/icon-social-youtube.svg" width="48" height="41" alt="YouTube"></a></li>
         </ul>
         <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <img class="logo-htmlacademy" src="#" alt="Логотип HTML Академии">
+        <img class="logo-htmlacademy" src="images/logo-footer-htmlacademy.svg" width="115" height="34" alt="Логотип HTML Академии">
       </section>
     </footer>
   </body>
