Изменена разметка отображения рейтинга на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -120,20 +120,7 @@
               </a>
               <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
               <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
-              <ul class="rating-visual">
-                <li class="rating-item">
-                  <img src="#" alt="Одна звезда рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Две звезды рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Три звезды рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Четыре звезды рейтинга">
-                </li>
-              </ul>
+              <img class="rating-visual" src="images/catalog/icon-rating-4stars.svg" width="140" height="37" alt="Четыре звезды рейтинга">
               <span class="rating-value">Рейтинг: 8,5</span>
             </li>
             <li class="hotel-card">
@@ -147,20 +134,7 @@
               </a>
               <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
               <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
-              <ul class="rating-visual">
-                <li class="rating-item">
-                  <img src="#" alt="Одна звезда рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Две звезды рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Три звезды рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Четыре звезды рейтинга">
-                </li>
-              </ul>
+              <img class="rating-visual" src="images/catalog/icon-rating-4stars.svg" width="140" height="37" alt="Четыре звезды рейтинга">
               <span class="rating-value">Рейтинг: 9,2</span>
             </li>
             <li class="hotel-card">
@@ -174,17 +148,7 @@
               </a>
               <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
               <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
-              <ul class="rating-visual">
-                <li class="rating-item">
-                  <img src="#" alt="Одна звезда рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Две звезды рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Три звезды рейтинга">
-                </li>
-              </ul>
+              <img class="rating-visual" src="images/catalog/icon-rating-3stars.svg" width="140" height="37" alt="Три звезды рейтинга">
               <span class="rating-value">Рейтинг: 6,9</span>
             </li>
             <li class="hotel-card">
@@ -198,14 +162,7 @@
               </a>
               <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
               <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
-              <ul class="rating-visual">
-                <li class="rating-item">
-                  <img src="#" alt="Одна звезда рейтинга">
-                </li>
-                <li class="rating-item">
-                  <img src="#" alt="Две звезды рейтинга">
-                </li>
-              </ul>
+              <img class="rating-visual" src="images/catalog/icon-rating-2stars.svg" width="140" height="37" alt="Две звезды рейтинга">
               <span class="rating-value">Рейтинг: 5,0</span>
             </li>
           </ul>
